--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -52,3 +52,24 @@
 .event-image {
   font-size: xxx-large;
 }
+
+.photo-div {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  text-align: center;
+  align-items: center;
+}
+
+.photo-div h2 {
+  margin-bottom: 25px;
+}
+
+.photo {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+
+.photo-buttons {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
