--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,17 +13,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 40vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
@@ -72,4 +61,9 @@
 .photo-buttons {
   padding-top: 25px;
   padding-bottom: 25px;
+}
+
+.header {
+  position: fixed !important;
+  width: 100%;
 }
