--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -139,3 +139,23 @@
   text-decoration: underline;
   border-color: transparent;
 }
+
+.user-email-tag {
+  font-size: 18px;
+  margin-bottom: 0rem;
+}
+
+.user-email-display {
+  font-size: 16px;
+  color: #6b6b83;
+}
+
+.user-displayname-tag {
+  font-size: 18px;
+  margin-bottom: 0rem;
+}
+
+.user-displayname-display {
+  font-size: 16px;
+  color: #6b6b83;
+}
