--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -186,3 +186,19 @@
   text-align: center;
   align-items: center;
 }
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
+.homepage {
+  padding-left: 20px;
+}
+
+.homepage-content {
+  padding-left: 100px;
+  padding-right: 100px;
+}
