Rename weddings/wedding to weddings/my-wedding, Fix My Events page when no wedding is created, Add required fields for wedding form, Change photo and event form to match the required field check

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -212,6 +212,11 @@
   text-align: center;
 }
 
+.error-div {
+  margin-top: 8vh;
+  text-align: center;
+}
+
 .edit-delete.col {
   max-width: fit-content;
 }
