--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -220,3 +220,26 @@
 .edit-delete.col {
   max-width: fit-content;
 }
+
+.attendee-card {
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+}
+
+.invite-card {
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+}
+
+.gift-card {
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+}
+
+.attending-weddings {
+  background-color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
